# RW_cube

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  configure_dev.sh  configure_rel.sh  format.sh
.github/workflows/: ci.yml
assets/materials/: gun_d.mtl
config/: config.hpp.in
include/: CMakeLists.txt  Camera.hpp  Cube.hpp  CubeTexture.hpp  Indices.hpp  Model.hpp  Normals.hpp  PseudoQuadTree.hpp  Shader.hpp  TexCoords.hpp  Ubo.hpp  Vertices.hpp  Window.hpp  Window.tpp  utils.hpp
res/: CMakeLists.txt  linmath.c  linmath.h
shaders/: .ninja_log  CMakeLists.txt  build.ninja
shaders/src/: shader.frag  shader.vert
shaders/src/diffuse_shader/: shader.frag
shaders/src/light_source_shader/: shader.frag  shader.vert
shaders/src/model_shader/: shader.frag  shader.vert
shaders/src/phong_shader/: shader.frag
shaders/src/specular_shader/: shader.frag  shader.vert
shaders/src/texture_shader/: shader.frag  shader.vert
src/: CMakeLists.txt  Camera.cpp  Cube.cpp  CubeTexture.cpp  Model.cpp  Shader.cpp  Ubo.cpp  Window.cpp  main.cpp  utils.cpp
